Fix text size on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -324,6 +324,7 @@ code {
             text-decoration: none;
             color: #3d3846;
             text-align: center;
+            overflow: hidden;
 
             &:hover {
                 opacity: 0.8;
@@ -353,6 +354,12 @@ code {
 
                     > strong {
                         color: #813d9c;
+                    }
+                }
+
+                @media screen and (max-width: 600px) {
+                    > figcaption {
+                        font-size: 15px;
                     }
                 }
             }
